added search area components

--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
 </nav>
 <main>
     <section class="form-area">
-        <div class="search-wrapper">
-            <input type="search" name="form-area-search" id="form-area-search" placeholder="Search movie..."
-                   autofocus>
-            <i class="fa-solid fa-filter"></i>
-        </div>
-        <div class="movie-output-control">
-            <button type="submit" class="btn">add movie</button>
-            <button type="submit" class="btn">edit movie</button>
+        <div class="search-container">
+            <div class="search-wrapper">
+                <input type="search" name="form-area-search" id="form-area-search" placeholder="Search movie..."
+                       autofocus>
+                <i class="fa-solid fa-filter"></i>
+            </div>
+            <div class="movie-output-control">
+                <button type="submit" class="btn">add movie</button>
+                <button type="submit" class="btn">edit movie</button>
+            </div>
         </div>
     </section>
     <section class="movie-carousel">
