load screen hides page until loading is complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-<nav>
+<nav class="content">
     <div class="logo">
         <i class="fa-solid fa-video"></i>
     </div>
@@ -31,7 +31,7 @@
         <li><a href="#">Contact Us</a></li>
     </ul>
 </nav>
-<main>
+<main class="main-content">
     <section class="form-area">
         <div class="search-container">
             <div class="search-wrapper">
