--- a/index.html
+++ b/index.html
@@ -10,28 +10,37 @@
     <link rel="stylesheet" href="/css/movies_app.css">
     <link rel="stylesheet" href="/css/nav.css">
     <link rel="stylesheet" href="/css/form_area.css">
+    <link rel="stylesheet" href="/css/scroller.css">
+    <link rel="stylesheet" href="/css/modals.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-<nav>
-    <div class="logo">
-        <i class="fa-solid fa-video"></i>
-    </div>
-    <div class="hamburger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-    </div>
-    <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Solutions</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact Us</a></li>
-    </ul>
-</nav>
+
 <main>
+    <div class="nav-container">
+    <nav>
+        <div class="logo">
+            <!--                <i class="fa-solid fa-video"></i>-->
+        </div>
+        <div class="hamburger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Search</a></li>
+            <li><a href="#">Add movie</a></li>
+            <li><a href="#">Edit movie</a></li>
+            <!--                <li><a href="#">Contact Us</a></li>-->
+        </ul>
+    </nav>
+    </div>
+    <div class="page-container">
+
+
     <section class="form-area">
+
         <div class="search-container">
             <div class="search-wrapper">
                 <input type="search" name="form-area-search" id="form-area-search" placeholder="Search movie..."
@@ -39,16 +48,86 @@
                 <i class="fa-solid fa-filter"></i>
             </div>
             <div class="movie-output-control">
-                <button type="submit" class="btn">add movie</button>
-                <button type="submit" class="btn">edit movie</button>
+                <button type="submit" class="btn open-add-movie-modal">add movie</button>
+                <button type="submit" class="btn open-edit-movie-modal">edit movie</button>
             </div>
         </div>
     </section>
+<!--        TODO: MOVIE SCROLLER-->
     <section class="movie-carousel">
-        <div><p>Add carousel here</p></div>
+        <div class="scroller">
+            <div class="images-container">
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png" /></a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/wars.png" /> </a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/who.png" /> </a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png" /> </a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/wars.png" /> </a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/who.png" /> </a> <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png" /> </a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/wars.png" /> </a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/who.png" /> </a> <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png" /> </a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/wars.png" /> </a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/who.png" /> </a> <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png" /> </a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/wars.png" /> </a>
+                <a href="#"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/who.png" /> </a>
+            </div>
+        </div>
     </section>
+<!--        TODO: ADD MODAL-->
+        <dialog  id="add-movie-modal" class="add-movie-modal">
+            <h2>Add Movie</h2>
+            <form action="#">
+                <div class="form-rows">
+                    <label for="add-title">Title</label>
+                    <input type="text" name="add-title" id="add-title">
+                </div>
+                <div class="form-rows">
+                    <label for="add-genre">Genre</label>
+                    <input type="text" name="add-genre" id="add-genre">
+                </div>
+                <div class="form-rows">
+                    <label for="add-rating">Rating</label>
+                    <input type="text" name="add-rating" id="add-rating">
+                </div>
+                <div class="form-rows">
+                    <label for="add-year">Year</label>
+                    <input type="text" name="add-year" id="add-year">
+                </div>
+<div class="add-buttons">
+    <button type="submit" class="btn add-movie-to-db">Add Movie</button>
+    <button type="submit" class="btn add-movie-close-btn">Close</button>
+</div>
+            </form>
+        </dialog>
+<!--        TODO:EDIT MODAL-->
+        <dialog  id="edit-movie-modal" class="edit-movie-modal">
+            <h2>Edit Movie</h2>
+            <form action="#">
+                <div class="form-rows">
+                    <label for="edit-title">Title</label>
+                    <input type="text" name="edit-title" id="edit-title">
+                </div>
+                <div class="form-rows">
+                    <label for="edit-genre">Genre</label>
+                    <input type="text" name="edit-genre" id="edit-genre">
+                </div>
+                <div class="form-rows">
+                    <label for="edit-rating">Rating</label>
+                    <input type="text" name="edit-rating" id="edit-rating">
+                </div>
+                <div class="form-rows">
+                    <label for="edit-year">Year</label>
+                    <input type="text" name="edit-year" id="edit-year">
+                </div>
+                <div class="edit-buttons">
+                    <button type="submit" class="btn add-movie-to-db">Add Movie</button>
+                    <button type="submit" class="btn edit-movie-close-btn">Close</button>
+                </div>
+            </form>
+        </dialog>
+    </div>
 </main>
 <script src="/js/nav.js"></script>
+<script src="js/modals.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
