added movieData.ID to create Card so I can later assign a class = to the id

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <input type="text" name="edit-year" id="edit-year">
                 </div>
                 <div class="edit-buttons">
-                    <button type="submit" class="btn add-movie-to-db">Add Movie</button>
+                    <button type="submit" class="btn edit-movie-to-db">Add Movie</button>
                     <button type="submit" class="btn edit-movie-close-btn">Close</button>
                 </div>
             </form>
