--- a/index.html
+++ b/index.html
@@ -194,14 +194,19 @@
             </form>
         </dialog>
         <!--        TODO:INFORMATION MODAL-->
-        <dialog open  id="movie-description-modal" class="movie-description-modal">
+        <dialog   id="movie-description-modal" class="movie-description-modal">
             <div class="movie-info-element">
                 <img src="/img/shrek2.jpeg" alt="shrek">
+                <div class="gradient"></div>
+                <i class="fa-solid fa-xmark"></i>
                 <div class="movie-info-element-text">
                     <h2 class="movie-info-title">FAMILY GUY</h2>
                     <p class="movie-description-plot">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem
                         eius eos esse est et eveniet, fugit ipsam modi natus necessitatibus.</p>
-                    <p class="movie-description-data">1999 - Adult Animation - 5.1 rating</p>
+                    <p class="movie-description-data"><span class="description-year"></span> - <span></span> Adult Animation -
+                        <span
+                            class="description-rating"></span>
+                        rating</p>
                 </div>
 
             </div>
@@ -209,7 +214,7 @@
 <!--            <div class="movie-description-btns btn-group">-->
 <!--                <button type="submit" class="btn close-description-btn">Close</button>-->
 <!--            </div>-->
-            </form>
+<!--            </form>-->
         </dialog>
     </div>
 </main>
