--- a/index.html
+++ b/index.html
@@ -58,84 +58,28 @@
         </section>
         <!--        TODO: MOVIE SCROLLER-->
         <section class="movie-carousel">
+            <div class="movie-cards">
             <h2>title goes here</h2>
             <p class="edit-movie-button">edit movie</p>
             <p class="delete-movie-button">delete movie</p>
             <div class="media-scroller snaps-inline">
 
-                <div class="media-element">
-                    <img
-                            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png"/>
-                    <i class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller edit-movie-button">Movie Title</p>
-                    <div class="movie-management-btns">
-                        <i class="fa-solid fa-trash-can delete-movie"></i>
-                        <i class="fa-solid fa-pen-to-square open-edit-movie-modal"></i>
-                    </div>
+<!--                <div class="media-element">-->
+<!--                    <img-->
+<!--                            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png"/>-->
+<!--                    <i class="fa-solid fa-circle-xmark"></i>-->
+<!--                    <p class="movie-title-scroller edit-movie-button">Movie Title</p>-->
+<!--                    <div class="movie-management-btns">-->
+<!--                        <i class="fa-solid fa-trash-can delete-movie"></i>-->
+<!--                        <i class="fa-solid fa-pen-to-square open-edit-movie-modal"></i>-->
+<!--                    </div>-->
 
-                </div>
-                <div class="media-element">
-                    <img
-                            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/wars.png"/>
-                    <i class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller ">Movie Title</p>
-                </div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/who.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/wars.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/who.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/wars.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/who.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/wars.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/who.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element"><img
-                        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/wars.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title <br>Movie Title</p></div>
-                <div class="media-element">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/who.png"/><i
-                        class="fa-solid fa-circle-xmark"></i>
-                    <p class="movie-title-scroller">Movie Title</p></div>
+<!--                </div>-->
                 <div class="movie-management-btns">
                     <i class="fa-solid fa-trash-can open-delete-movie-modal"></i>
                     <i class="fa-solid fa-pen-to-square open-edit-movie-modal"></i>
                 </div>
+            </div>
             </div>
 
         </section>
@@ -220,7 +164,7 @@
 </main>
 <div class="loader"></div>
 <script src="/js/nav.js"></script>
-<script src="js/modals.js"></script>
 <script src="js/main.js"></script>
+<script src="js/modals.js"></script>
 </body>
 </html>
