--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 <!--                        <i class="fa-solid fa-pen-to-square open-edit-movie-modal"></i>-->
 <!--                    </div>-->
 
-<!--                </div>-->
-                <div class="movie-management-btns">
-                    <i class="fa-solid fa-trash-can open-delete-movie-modal"></i>
-                    <i class="fa-solid fa-pen-to-square open-edit-movie-modal"></i>
                 </div>
+<!--                <div class="movie-management-btns">-->
+<!--                    <i class="fa-solid fa-trash-can open-delete-movie-modal"></i>-->
+<!--                    <i class="fa-solid fa-pen-to-square open-edit-movie-modal"></i>-->
+<!--                </div>-->
             </div>
-            </div>
+<!--            </div>-->
 
         </section>
         <!--        TODO: ADD MODAL-->
@@ -105,7 +105,7 @@
                 </div>
                 <div class="add-buttons btn-group">
                     <button type="submit" class="btn add-movie-to-db">Add Movie</button>
-                    <button type="submit" class="btn add-movie-close-btn">Close</button>
+                    <button type="submit" class="btn close">Close</button>
                 </div>
             </form>
         </dialog>
@@ -133,7 +133,7 @@
                 <div class="edit-buttons btn-group">
                     <button type="submit" class="btn submit-edit-btn">Submit</button>
 
-                    <button type="submit" class="btn edit-movie-close-btn">Close</button>
+                    <button type="submit" class="btn close">Close</button>
                 </div>
             </form>
         </dialog>
@@ -142,7 +142,7 @@
             <div class="movie-info-element">
                 <img src="/img/shrek2.jpeg" alt="shrek">
                 <div class="gradient"></div>
-                <i class="fa-solid fa-xmark"></i>
+                <i class="fa-solid fa-xmark close"></i>
                 <div class="movie-info-element-text">
                     <h2 class="movie-info-title">FAMILY GUY</h2>
                     <p class="movie-description-plot">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem
@@ -158,7 +158,7 @@
 <!--            <div class="movie-description-btns btn-group">-->
 <!--                <button type="submit" class="btn close-description-btn">Close</button>-->
 <!--            </div>-->
-<!--            </form>-->
+            </form>
         </dialog>
     </div>
 </main>
