edit almost works

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
                 </div>
 
                 <div class="edit-buttons btn-group">
-                    <button type="submit" class="btn submit-edit-btn">Submit</button>
+<!--                    <button type="submit" class="btn submit-edit-btn">Submit</button>-->
 
-                    <button type="submit" class="btn close">Close</button>
+<!--                    <button type="submit" class="btn close">Close</button>-->
                 </div>
             </form>
         </dialog>
