--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
                 <!--                <li><a href="#">Contact Us</a></li>-->
             </ul>
         </nav>
+<!--        TODO: Search Form-->
     </div>
     <div class="page-container">
+
         <section class="form-area">
+
             <div class="search-container">
+                <h1 class="movie-search-h1">movie search</h1>
                 <div class="search-wrapper">
                     <input type="search" name="form-area-search" id="form-area-search" placeholder="Search movie..."
                            autofocus>
@@ -54,35 +58,17 @@
                     <button type="submit" class="btn open-add-movie-modal">add movie</button>
 <!--                    <button type="submit" class="btn open-edit-movie-modal">edit movie</button>-->
                 </div>
+                <!--        TODO: MOVIE SCROLLER-->
+                <section class="movie-carousel">
+                    <div class="movie-cards">
+
+                        <div class="media-scroller snaps-inline">
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
-        <!--        TODO: MOVIE SCROLLER-->
-        <section class="movie-carousel">
-            <div class="movie-cards">
-            <h2>title goes here</h2>
-            <p class="edit-movie-button">edit movie</p>
-            <p class="delete-movie-button">delete movie</p>
-            <div class="media-scroller snaps-inline">
 
-<!--                <div class="media-element">-->
-<!--                    <img-->
-<!--                            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/158090/trek.png"/>-->
-<!--                    <i class="fa-solid fa-circle-xmark"></i>-->
-<!--                    <p class="movie-title-scroller edit-movie-button">Movie Title</p>-->
-<!--                    <div class="movie-management-btns">-->
-<!--                        <i class="fa-solid fa-trash-can delete-movie"></i>-->
-<!--                        <i class="fa-solid fa-pen-to-square open-edit-movie-modal"></i>-->
-<!--                    </div>-->
-
-                </div>
-<!--                <div class="movie-management-btns">-->
-<!--                    <i class="fa-solid fa-trash-can open-delete-movie-modal"></i>-->
-<!--                    <i class="fa-solid fa-pen-to-square open-edit-movie-modal"></i>-->
-<!--                </div>-->
-            </div>
-<!--            </div>-->
-
-        </section>
         <!--        TODO: ADD MODAL-->
         <dialog id="add-movie-modal" class="add-movie-modal">
             <h2>Add Movie</h2>
