search bar scans internally for movies already added onto list

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="search-container">
                 <h1 class="movie-search-h1">movie search</h1>
                 <div class="search-wrapper">
-                    <input type="search" name="form-area-search" id="form-area-search" placeholder="Search movie..."
+                    <input type="search" name="form-area-search" id="form-area-search" placeholder="Search movie or genre..."
                            autofocus>
                     <i class="fa-solid fa-filter"></i>
                 </div>
