--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="css/custom.css">
+    <script src="js/keys.js"></script>
 
 </head>
 <body>
@@ -50,7 +51,10 @@
             <div class="search-container">
                 <h1 class="movie-search-h1">movie search</h1>
                 <div class="search-wrapper">
-                    <input type="search" name="form-area-search" id="form-area-search" placeholder="Search movie or genre..."
+                    <input type="search" name="form-area-search" id="form-area-search" placeholder="Filter..."
+                           autofocus>
+                    <i class="fa-solid fa-filter"></i>
+                    <input type="search" name="form-area-search" id="form-area-new" placeholder="Discover movies.."
                            autofocus>
                     <i class="fa-solid fa-filter"></i>
                 </div>
