--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-
+<div class="modal-backdrop"></div>
 
 <main class="content">
     <div class="nav-container">
@@ -72,7 +72,7 @@
         <!--        TODO: ADD MODAL-->
         <dialog id="add-movie-modal" class="add-movie-modal">
             <h2>Add Movie</h2>
-            <form action="#" method="dialog">
+            <form action="#" method="dialog" >
                 <div class="form-rows">
                     <label for="add-title">Title</label>
                     <input type="text" name="add-title" id="add-title">
