changed 'year' to 'release' on add and edit modals

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                     <input type="text" name="add-rating" id="add-rating">
                 </div>
                 <div class="form-rows">
-                    <label for="add-year">Year</label>
+                    <label for="add-year">Release</label>
                     <input type="text" name="add-year" id="add-year">
                 </div>
                 <div class="add-buttons btn-group">
@@ -503,7 +503,7 @@
                     <input type="text" name="edit-rating" id="edit-rating">
                 </div>
                 <div class="form-rows">
-                    <label for="edit-year">Year</label>
+                    <label for="edit-year">Release</label>
                     <input type="text" name="edit-year" id="edit-year">
                 </div>
 
