added image mouseover hover effect

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <div class="modal-backdrop"></div>
 
 <main class="content">
+    <!--        TODO: NAVIGATION-->
     <div class="nav-container">
         <nav>
             <div class="logo">
@@ -451,7 +452,6 @@
                 <!--        TODO: MOVIE SCROLLER-->
                 <section class="movie-carousel">
                     <div class="movie-cards">
-
                         <div class="media-scroller snaps-inline">
                         </div>
                     </div>
@@ -539,9 +539,29 @@
         </dialog>
     </div>
 </main>
+<!--TODO CUSTOM CURSOR-->
+<div class="cursors">
+    <div>
+        <span>TESTING 123</span>
+    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+</div>
+<!--TODO CUSTOM LOADER-->
 <div class="loader"></div>
-<script src="/js/nav.js"></script>
+<script src="js/nav.js"></script>
 <script src="js/main.js"></script>
 <script src="js/modals.js"></script>
+<script src="js/cursors.js"></script>
 </body>
 </html>
