--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Movies App</title>
     <script src="js/jquery-3.6.0.js"></script>
-    <link rel="stylesheet" href="/css/movies_app_utilities.css">
-    <link rel="stylesheet" href="/css/movies_app.css">
-    <link rel="stylesheet" href="/css/nav.css">
-    <link rel="stylesheet" href="/css/form_area.css">
-    <link rel="stylesheet" href="/css/scroller.css">
-    <link rel="stylesheet" href="/css/modals.css">
+    <link rel="stylesheet" href="css/movies_app_utilities.css">
+    <link rel="stylesheet" href="css/movies_app.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/form_area.css">
+    <link rel="stylesheet" href="css/scroller.css">
+    <link rel="stylesheet" href="css/modals.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
           integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -517,7 +517,7 @@
         <!--        TODO:INFORMATION MODAL-->
         <dialog   id="movie-description-modal" class="movie-description-modal">
             <div class="movie-info-element">
-                <img src="/img/shrek2.jpeg" alt="shrek">
+                <img src="img/shrek2.jpeg" alt="shrek">
                 <div class="gradient"></div>
                 <i class="fa-solid fa-xmark close"></i>
                 <div class="movie-info-element-text">
